--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -143,10 +143,6 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MhJ-BT-VIX">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="73" id="6Mw-xq-1y4"/>
-                                    <constraint firstAttribute="height" constant="73" id="jOY-yW-bmH"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                                 <state key="normal" title="Notifications">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -162,7 +158,6 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UFn-7s-Y4L">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="72" id="OqP-E6-fLk"/>
-                                    <constraint firstAttribute="width" constant="73" id="aCb-sj-4dM"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                                 <state key="normal" title="Networking">
@@ -179,7 +174,6 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nSP-t5-Er5">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="73" id="NRV-I6-D9o"/>
-                                    <constraint firstAttribute="height" constant="72" id="f1N-Qo-Qrr"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" image="Schedule.jpg">
@@ -196,19 +190,23 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="80" id="1U3-ae-DJ1"/>
+                            <constraint firstItem="UFn-7s-Y4L" firstAttribute="centerY" secondItem="MhJ-BT-VIX" secondAttribute="centerY" type="default" id="9Yh-2c-yPK"/>
                             <constraint firstItem="OGL-9d-R5S" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" type="default" id="B2P-rM-dJC"/>
+                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="190" id="FfW-dY-unp"/>
+                            <constraint firstItem="UFn-7s-Y4L" firstAttribute="top" secondItem="MhJ-BT-VIX" secondAttribute="top" type="default" id="O2x-SV-2mq"/>
                             <constraint firstItem="Jjm-gF-B4D" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="46" id="PwO-hv-dtB"/>
                             <constraint firstItem="yCg-gF-EnB" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" type="default" id="RJd-fd-ukW"/>
-                            <constraint firstItem="nSP-t5-Er5" firstAttribute="leading" secondItem="yCg-gF-EnB" secondAttribute="leading" type="default" id="WtL-rf-6uP"/>
-                            <constraint firstItem="nSP-t5-Er5" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="185" id="bf5-N4-KCs"/>
+                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="trailing" secondItem="Jjm-gF-B4D" secondAttribute="trailing" type="default" id="U1p-Le-XNM"/>
                             <constraint firstItem="OGL-9d-R5S" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" type="default" id="dfC-tO-Hdv"/>
                             <constraint firstItem="Jjm-gF-B4D" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="97" id="ffw-A3-cAw"/>
-                            <constraint firstAttribute="trailing" secondItem="UFn-7s-Y4L" secondAttribute="trailing" constant="41" id="foe-KK-f8a"/>
-                            <constraint firstAttribute="bottom" secondItem="UFn-7s-Y4L" secondAttribute="bottom" constant="182" id="hcy-cI-shQ"/>
+                            <constraint firstItem="nSP-t5-Er5" firstAttribute="bottom" secondItem="Jjm-gF-B4D" secondAttribute="bottom" type="default" id="jy5-eI-AuS"/>
                             <constraint firstItem="OGL-9d-R5S" firstAttribute="trailing" secondItem="qAQ-Vj-hDn" secondAttribute="trailing" type="default" id="kFW-vP-fFJ"/>
                             <constraint firstAttribute="trailing" secondItem="yCg-gF-EnB" secondAttribute="trailing" constant="8" id="nr6-Rn-RHw"/>
-                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="263" id="uxP-vC-ccW"/>
+                            <constraint firstItem="nSP-t5-Er5" firstAttribute="top" secondItem="Jjm-gF-B4D" secondAttribute="top" type="default" id="nuN-Rq-48a"/>
+                            <constraint firstItem="UFn-7s-Y4L" firstAttribute="leading" secondItem="nSP-t5-Er5" secondAttribute="leading" type="default" id="tnf-f0-QHk"/>
+                            <constraint firstItem="UFn-7s-Y4L" firstAttribute="trailing" secondItem="nSP-t5-Er5" secondAttribute="trailing" type="default" id="vF9-q1-4yD"/>
+                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="leading" secondItem="Jjm-gF-B4D" secondAttribute="leading" type="default" id="wqz-Lr-F0G"/>
+                            <constraint firstAttribute="trailing" secondItem="nSP-t5-Er5" secondAttribute="trailing" constant="65" id="yx5-5t-xYz"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="IIK-dc-mJ7"/>
@@ -613,7 +611,6 @@
         <!--Navigation Controller-->
         <scene sceneID="LRF-Xc-bsB">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sVZ-sx-D86" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="yGN-Jh-vfb" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="pUi-0l-H0B">
@@ -625,6 +622,7 @@
                         <segue destination="qBv-ti-Psr" kind="relationship" relationship="rootViewController" id="Z9V-cd-HvF"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sVZ-sx-D86" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="450" y="-938"/>
         </scene>
@@ -660,7 +658,6 @@
         <class className="HomeViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
             <relationships>
-                <relationship kind="action" name="networkingButton:" candidateClass="UIButton"/>
                 <relationship kind="action" name="updateButton:" candidateClass="UIBarButtonItem"/>
             </relationships>
         </class>
@@ -716,8 +713,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="JrP-9o-gag"/>
-        <segue reference="CLt-Fl-cxe"/>
         <segue reference="LVI-Q5-6Lc"/>
+        <segue reference="JrP-9o-gag"/>
+        <segue reference="L4t-4W-91a"/>
     </inferredMetricsTieBreakers>
 </document>
