--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -198,31 +198,61 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NxF-Kn-QJF">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Button" image="maps.jpg">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="4pJ-1g-7gL" kind="push" identifier="segue7" id="jWm-hD-pdf"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Maps" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MFh-CY-QnT">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="4lu-Ph-fQx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Jjm-gF-B4D" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="176" id="3zl-pf-obP"/>
+                            <constraint firstItem="NxF-Kn-QJF" firstAttribute="centerX" secondItem="qAQ-Vj-hDn" secondAttribute="centerX" type="default" id="5JC-XD-JP4"/>
                             <constraint firstItem="zva-c2-rDI" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="7Ah-yJ-XHI"/>
                             <constraint firstItem="MhJ-BT-VIX" firstAttribute="bottom" secondItem="nSP-t5-Er5" secondAttribute="bottom" type="default" id="9at-1f-3W8"/>
+                            <constraint firstItem="MFh-CY-QnT" firstAttribute="top" secondItem="zva-c2-rDI" secondAttribute="top" type="default" id="CJj-jx-PmR"/>
                             <constraint firstItem="cXx-mh-isf" firstAttribute="baseline" secondItem="Xnm-P4-fzq" secondAttribute="baseline" type="default" id="CWr-Au-rHU"/>
+                            <constraint firstItem="MFh-CY-QnT" firstAttribute="baseline" secondItem="zva-c2-rDI" secondAttribute="baseline" type="default" id="E5Z-6H-uAK"/>
                             <constraint firstItem="Xnm-P4-fzq" firstAttribute="baseline" secondItem="PJx-wi-3C3" secondAttribute="baseline" type="default" id="EVq-49-6Qy"/>
-                            <constraint firstItem="zva-c2-rDI" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="248" id="Ecm-eM-qK4"/>
-                            <constraint firstItem="Xnm-P4-fzq" firstAttribute="centerX" secondItem="qAQ-Vj-hDn" secondAttribute="centerX" type="default" id="HxI-tB-fAx"/>
                             <constraint firstItem="Xnm-P4-fzq" firstAttribute="trailing" secondItem="MhJ-BT-VIX" secondAttribute="trailing" type="default" id="LgV-2m-hPC"/>
                             <constraint firstItem="nSP-t5-Er5" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="O1q-NL-e9e"/>
                             <constraint firstItem="nSP-t5-Er5" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="45" id="Osm-OT-wA0"/>
                             <constraint firstItem="PJx-wi-3C3" firstAttribute="centerX" secondItem="zva-c2-rDI" secondAttribute="centerX" type="default" id="Pyg-eF-zxa"/>
                             <constraint firstItem="PJx-wi-3C3" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="117" id="R10-QU-ids"/>
                             <constraint firstItem="Jjm-gF-B4D" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="RUc-d9-eHi"/>
+                            <constraint firstItem="NxF-Kn-QJF" firstAttribute="bottom" secondItem="Jjm-gF-B4D" secondAttribute="bottom" type="default" id="T0X-dm-Stj"/>
                             <constraint firstItem="Xnm-P4-fzq" firstAttribute="leading" secondItem="MhJ-BT-VIX" secondAttribute="leading" type="default" id="Wq7-9o-XlN"/>
                             <constraint firstItem="UFn-7s-Y4L" firstAttribute="top" secondItem="MhJ-BT-VIX" secondAttribute="top" type="default" id="YrI-h3-vkw"/>
                             <constraint firstItem="MhJ-BT-VIX" firstAttribute="top" secondItem="nSP-t5-Er5" secondAttribute="top" type="default" id="aLO-zg-C6O"/>
+                            <constraint firstItem="NxF-Kn-QJF" firstAttribute="leading" secondItem="Xnm-P4-fzq" secondAttribute="leading" type="default" id="aOY-xW-iia"/>
+                            <constraint firstItem="NxF-Kn-QJF" firstAttribute="trailing" secondItem="Xnm-P4-fzq" secondAttribute="trailing" type="default" id="bzo-wN-Sxo"/>
                             <constraint firstItem="Xnm-P4-fzq" firstAttribute="top" secondItem="PJx-wi-3C3" secondAttribute="top" type="default" id="dv9-i1-qOh"/>
                             <constraint firstAttribute="trailing" secondItem="UFn-7s-Y4L" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="gGY-wk-BQC"/>
+                            <constraint firstItem="MFh-CY-QnT" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="248" id="qwK-Cr-JpT"/>
+                            <constraint firstItem="MFh-CY-QnT" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="144" id="r65-fO-8H2"/>
                             <constraint firstAttribute="trailing" secondItem="cXx-mh-isf" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="rmc-2s-t11"/>
                             <constraint firstItem="Jjm-gF-B4D" firstAttribute="trailing" secondItem="nSP-t5-Er5" secondAttribute="trailing" type="default" id="sh0-qA-d5j"/>
+                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="baseline" secondItem="UFn-7s-Y4L" secondAttribute="baseline" type="default" id="v51-Hm-9VC"/>
                             <constraint firstItem="cXx-mh-isf" firstAttribute="top" secondItem="Xnm-P4-fzq" secondAttribute="top" type="default" id="wfZ-zP-1Jp"/>
                             <constraint firstItem="UFn-7s-Y4L" firstAttribute="bottom" secondItem="MhJ-BT-VIX" secondAttribute="bottom" type="default" id="yNX-F9-Jdc"/>
+                            <constraint firstItem="NxF-Kn-QJF" firstAttribute="top" secondItem="Jjm-gF-B4D" secondAttribute="top" type="default" id="z3Z-ez-I5b"/>
+                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="baseline" secondItem="nSP-t5-Er5" secondAttribute="baseline" type="default" id="zwn-bm-4a1"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="iConfs" id="IIK-dc-mJ7">
@@ -602,6 +632,47 @@
             </objects>
             <point key="canvasLocation" x="1021" y="547"/>
         </scene>
+        <!--Map View Controller - Maps-->
+        <scene sceneID="TSI-qh-PDV">
+            <objects>
+                <viewController storyboardIdentifier="MapViewController" id="4pJ-1g-7gL" customClass="MapViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DcG-5W-bqb">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <pickerView hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vw9-G5-b8E">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="216" id="BKW-Eu-DBh"/>
+                                </constraints>
+                            </pickerView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="MIs-2v-SXW">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="344" id="QKS-9X-DWu"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MIs-2v-SXW" firstAttribute="trailing" secondItem="DcG-5W-bqb" secondAttribute="trailing" type="default" id="4I2-KP-MZW"/>
+                            <constraint firstItem="Vw9-G5-b8E" firstAttribute="leading" secondItem="DcG-5W-bqb" secondAttribute="leading" type="default" id="Qjc-M8-Ava"/>
+                            <constraint firstItem="MIs-2v-SXW" firstAttribute="leading" secondItem="DcG-5W-bqb" secondAttribute="leading" type="default" id="RqP-gE-Huo"/>
+                            <constraint firstItem="Vw9-G5-b8E" firstAttribute="bottom" secondItem="DcG-5W-bqb" secondAttribute="bottom" type="default" id="f6U-s7-aXB"/>
+                            <constraint firstItem="MIs-2v-SXW" firstAttribute="top" secondItem="DcG-5W-bqb" secondAttribute="top" type="default" id="ibB-t9-8kZ"/>
+                            <constraint firstItem="Vw9-G5-b8E" firstAttribute="trailing" secondItem="DcG-5W-bqb" secondAttribute="trailing" type="default" id="qhJ-gH-94C"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Maps" id="1AE-oB-s9d">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="K7b-Ep-joF"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="map" destination="MIs-2v-SXW" id="QhY-It-jXg"/>
+                        <outlet property="picker" destination="Vw9-G5-b8E" id="7MN-z1-RdG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WBx-Z1-Avo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1524" y="431"/>
+        </scene>
         <!--EventUI View Controller-->
         <scene sceneID="dBg-eA-mFn">
             <objects>
@@ -643,7 +714,93 @@
         <image name="Notifications.jpg" width="50" height="50"/>
         <image name="Organization.jpg" width="50" height="50"/>
         <image name="Schedule.jpg" width="50" height="50"/>
+        <image name="maps.jpg" width="50" height="50"/>
     </resources>
+    <classes>
+        <class className="AllNetworkingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNetworkingViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="AllNotificationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNotificationViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableNotifications" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="CommunicationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommunicationViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="clearButton:" candidateClass="UIButton"/>
+                <relationship kind="action" name="feedbackOrMessageButton:" candidateClass="UISegmentedControl"/>
+                <relationship kind="action" name="sendButton:"/>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="feedback" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="EventUIViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EventUIViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="addNote:" candidateClass="UIButton"/>
+                <relationship kind="action" name="goToRoom:" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="HomeViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="updateButton:" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="IConfsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/IConfsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="passwordField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="MapViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="map" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="NetworkingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkingViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="networkingDescription" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="networkingTitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="personName" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="personPhoto" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="NotificationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="notificationDate" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="notificationName" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="notificationText" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="PersonProfileViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonProfileViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="PersonalProgramTKCalendarDayViewController" superclassName="TKCalendarDayViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonalProgramTKCalendarDayViewController.h"/>
+        </class>
+        <class className="TKCalendarDayViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TKCalendarDayViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
