--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -648,10 +648,14 @@
                                     <constraint firstAttribute="height" constant="216" id="BKW-Eu-DBh"/>
                                 </constraints>
                             </pickerView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="MIs-2v-SXW">
+                            <imageView multipleTouchEnabled="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="MIs-2v-SXW">
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="344" id="QKS-9X-DWu"/>
                                 </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="uRk-ha-n7Z" appends="YES" id="Anr-Bm-IWr"/>
+                                </connections>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -673,6 +677,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WBx-Z1-Avo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <pinchGestureRecognizer id="uRk-ha-n7Z">
+                    <connections>
+                        <action selector="zoomIn:" destination="4pJ-1g-7gL" id="5mn-PA-wJN"/>
+                    </connections>
+                </pinchGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1524" y="431"/>
         </scene>
@@ -752,7 +761,6 @@
         <class className="HomeViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
             <relationships>
-                <relationship kind="action" name="networkingButton:" candidateClass="UIButton"/>
                 <relationship kind="action" name="updateButton:" candidateClass="UIBarButtonItem"/>
             </relationships>
         </class>
@@ -766,6 +774,7 @@
         <class className="MapViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
             <relationships>
+                <relationship kind="action" name="zoomIn:" candidateClass="UIPinchGestureRecognizer"/>
                 <relationship kind="outlet" name="map" candidateClass="UIImageView"/>
             </relationships>
         </class>
