--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -182,9 +182,6 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Networking" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cXx-mh-isf">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="qq8-bI-Is7"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -219,12 +216,38 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="12d-a9-ce1">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="73" id="aWv-XY-ay0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" image="Notes.jpg">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="1GJ-Uz-eL2" kind="push" identifier="segue9" id="ThI-O1-mae"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Notes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ukj-8s-PZJ">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="clq-ji-FA0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="12d-a9-ce1" firstAttribute="leading" secondItem="cXx-mh-isf" secondAttribute="leading" type="default" id="1Gl-B9-dWF"/>
                             <constraint firstItem="Jjm-gF-B4D" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="176" id="3zl-pf-obP"/>
                             <constraint firstItem="NxF-Kn-QJF" firstAttribute="centerX" secondItem="qAQ-Vj-hDn" secondAttribute="centerX" type="default" id="5JC-XD-JP4"/>
                             <constraint firstItem="zva-c2-rDI" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="7Ah-yJ-XHI"/>
+                            <constraint firstItem="12d-a9-ce1" firstAttribute="bottom" secondItem="NxF-Kn-QJF" secondAttribute="bottom" type="default" id="8cM-bB-Gh9"/>
                             <constraint firstItem="MhJ-BT-VIX" firstAttribute="bottom" secondItem="nSP-t5-Er5" secondAttribute="bottom" type="default" id="9at-1f-3W8"/>
                             <constraint firstItem="MFh-CY-QnT" firstAttribute="top" secondItem="zva-c2-rDI" secondAttribute="top" type="default" id="CJj-jx-PmR"/>
                             <constraint firstItem="cXx-mh-isf" firstAttribute="baseline" secondItem="Xnm-P4-fzq" secondAttribute="baseline" type="default" id="CWr-Au-rHU"/>
@@ -243,14 +266,19 @@
                             <constraint firstItem="NxF-Kn-QJF" firstAttribute="leading" secondItem="Xnm-P4-fzq" secondAttribute="leading" type="default" id="aOY-xW-iia"/>
                             <constraint firstItem="NxF-Kn-QJF" firstAttribute="trailing" secondItem="Xnm-P4-fzq" secondAttribute="trailing" type="default" id="bzo-wN-Sxo"/>
                             <constraint firstItem="Xnm-P4-fzq" firstAttribute="top" secondItem="PJx-wi-3C3" secondAttribute="top" type="default" id="dv9-i1-qOh"/>
+                            <constraint firstAttribute="trailing" secondItem="Ukj-8s-PZJ" secondAttribute="trailing" constant="28" id="eCa-JX-zbP"/>
                             <constraint firstAttribute="trailing" secondItem="UFn-7s-Y4L" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="gGY-wk-BQC"/>
-                            <constraint firstItem="MFh-CY-QnT" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="248" id="qwK-Cr-JpT"/>
+                            <constraint firstItem="Ukj-8s-PZJ" firstAttribute="top" secondItem="MFh-CY-QnT" secondAttribute="top" type="default" id="gPD-zz-yRj"/>
                             <constraint firstItem="MFh-CY-QnT" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="144" id="r65-fO-8H2"/>
                             <constraint firstAttribute="trailing" secondItem="cXx-mh-isf" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="rmc-2s-t11"/>
                             <constraint firstItem="Jjm-gF-B4D" firstAttribute="trailing" secondItem="nSP-t5-Er5" secondAttribute="trailing" type="default" id="sh0-qA-d5j"/>
                             <constraint firstItem="cXx-mh-isf" firstAttribute="top" secondItem="Xnm-P4-fzq" secondAttribute="top" type="default" id="wfZ-zP-1Jp"/>
+                            <constraint firstItem="Ukj-8s-PZJ" firstAttribute="baseline" secondItem="MFh-CY-QnT" secondAttribute="baseline" type="default" id="wgV-fm-dOi"/>
+                            <constraint firstItem="Ukj-8s-PZJ" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="248" id="x3s-5r-7qp"/>
+                            <constraint firstItem="12d-a9-ce1" firstAttribute="top" secondItem="NxF-Kn-QJF" secondAttribute="top" type="default" id="xUl-Zc-6oB"/>
                             <constraint firstItem="UFn-7s-Y4L" firstAttribute="bottom" secondItem="MhJ-BT-VIX" secondAttribute="bottom" type="default" id="yNX-F9-Jdc"/>
                             <constraint firstItem="NxF-Kn-QJF" firstAttribute="top" secondItem="Jjm-gF-B4D" secondAttribute="top" type="default" id="z3Z-ez-I5b"/>
+                            <constraint firstAttribute="trailing" secondItem="12d-a9-ce1" secondAttribute="trailing" constant="17" id="zck-ey-KTY"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="iConfs" id="IIK-dc-mJ7">
@@ -702,6 +730,23 @@
             </objects>
             <point key="canvasLocation" x="1418" y="-938"/>
         </scene>
+        <!--View Controller - Notes-->
+        <scene sceneID="sft-KW-qw5">
+            <objects>
+                <viewController id="1GJ-Uz-eL2" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WfL-Pm-VTy">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Notes" id="PZS-hm-9Wb">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="gWo-SW-8rG"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hkr-Je-f6R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2004" y="-924"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="DqG-af-atm">
             <objects>
@@ -723,6 +768,7 @@
     </scenes>
     <resources>
         <image name="Networking.jpg" width="50" height="50"/>
+        <image name="Notes.jpg" width="50" height="50"/>
         <image name="Notifications.jpg" width="50" height="50"/>
         <image name="Organization.jpg" width="50" height="50"/>
         <image name="Schedule.jpg" width="50" height="50"/>
